service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-2-e-service
spec:
  selector:
    app: e-2-e
  ports:
    - port: 80
      targetPort: 3000
