ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-2-e-ingress
spec:
  rules:
    - host: e-2-e.rutik.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: e-2-e-service
              port:
                number: 80
